--- a/src/Components/Services/Services.css
+++ b/src/Components/Services/Services.css
@@ -3,20 +3,20 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin: 80px auto; 
+    margin: 80px auto;
     gap: 80px;
-    max-width: 1200px; 
+    max-width: 1200px;
 }
 
 .services-title {
-    position: relative; 
+    position: relative;
 }
 
 .services-title h1 {
     padding: 0 30px;
-    font-size: 80px; 
+    font-size: 80px;
     font-weight: 600;
-    margin-bottom: 20px; 
+    margin-bottom: 20px;
 }
 
 .services-title img {
@@ -28,7 +28,7 @@
 
 .services-container {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); /* Responsive grid */
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 40px;
     width: 100%;
 }
@@ -36,7 +36,7 @@
 .services-format {
     display: flex;
     flex-direction: column;
-    padding: 40px; 
+    padding: 40px;
     justify-content: center;
     gap: 20px;
     border-radius: 10px;
@@ -52,60 +52,56 @@
 }
 
 .services-format h2 {
-    font-size: 38px; 
+    font-size: 38px;
     font-weight: 800;
     background: linear-gradient(90deg, rgba(50, 34, 191, 1) 23%, rgba(161, 76, 163, 1) 60%);
     background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    margin-bottom: 10px; 
+    margin-bottom: 10px;
 }
 
 .services-format h3 {
-    font-size: 42px; 
+    font-size: 42px;
     font-weight: 600;
-    margin-bottom: 15px; 
+    margin-bottom: 15px;
 }
 
 .services-format p {
     color: #d4d4d4;
-    font-size: 18px; 
+    font-size: 18px;
     line-height: 1.6;
-    max-width: 280px; 
-    margin: 0 auto; 
+    max-width: 280px;
+    margin: 0 auto;
 }
 
-
-
-
-
-
-
 @media(max-width: 768px) {
-    .services{
+    .services {
         align-items: start;
         gap: 70px;
         margin: 20px 70px;
     }
-    .services-title h1{
+    
+    .services-title h1 {
         padding: 0;
         font-size: 50px;
     }
-    .services-title img{
+    
+    .services-title img {
         width: 130px;
         margin-right: -20px;
-
     }
-    .services-format{
+    
+    .services-format {
         gap: 20px;
         padding: 32px;
-
     }
-    .services-format h2{
+    
+    .services-format h2 {
         font-size: 28px;
-
     }
-    .services-format p{
+    
+    .services-format p {
         font-size: 18px;
         line-height: 32px;
         max-width: 300px;
